deploy/kustomize/authproxy-demo/overlays/dev/authproxy-development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authproxy
spec:
  template:
    spec:
      containers:
        - name: authproxy
          args:
            - serve
            - --auto-migrate
            - --config=/etc/authproxy/config.yaml
            - admin-api,api,public,worker
