deploy/kustomize/authproxy-demo/overlays/dev/authproxy-secrets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authproxy
spec:
  template:
    spec:
      containers:
        - name: authproxy
          volumeMounts:
            - mountPath: /etc/authproxy/keys/actors
              $patch: delete
            - name: actors-keys
              mountPath: /etc/authproxy/keys/actors/root
            - name: smoke-actors-keys
              mountPath: /etc/authproxy/keys/actors/smoke
              readOnly: true
      volumes:
        - name: jwt-keys
          secret:
            secretName: dev-jwt
        - name: encryption-keys
          secret:
            secretName: dev-encryption
        - name: actors-keys
          secret:
            secretName: dev-actors
        - name: smoke-actors-keys
          secret:
            secretName: dev-smoke-actors
