deploy/kustomize/authproxy-demo/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
spec:
  ingressClassName: nginx
  tls:
    - secretName: dev-branch-wildcard-tls
      hosts:
        - "*.dev.authproxy.net"
    - secretName: dev-subdomain-wildcard-tls
      hosts:
        - "*.branch.dev.authproxy.net"
  rules:
    - host: branch.dev.authproxy.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-shell
                port:
                  name: http
    - host: marketplace.branch.dev.authproxy.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authproxy
                port:
                  name: public
    - host: admin.branch.dev.authproxy.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authproxy
                port:
                  name: admin-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-oauth2-server
spec:
  ingressClassName: nginx
  tls:
    - secretName: dev-subdomain-wildcard-tls
      hosts:
        - oauth2.branch.dev.authproxy.net
  rules:
    - host: oauth2.branch.dev.authproxy.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-oauth2-server
                port:
                  name: http
